[gd_scene load_steps=12 format=3 uid="uid://cvmu0yiletcek"]

[ext_resource type="Script" path="res://code/entities/ghost/ghost.gd" id="1_pgtt6"]
[ext_resource type="Texture2D" uid="uid://fcg7474fuqrf" path="res://assets/art/ghost_night.png" id="1_qe422"]
[ext_resource type="AudioStream" uid="uid://d1fxeqalcngeh" path="res://assets/sound/Spooktober_SoundDesign_1_ghost_chase.ogg" id="3_3j0uu"]
[ext_resource type="AudioStream" uid="uid://cf4if4m1s2n4i" path="res://assets/sound/Spooktober_SoundDesign_1_Ghost_Appear.ogg" id="4_qqd06"]
[ext_resource type="AudioStream" uid="uid://ro8rp34gx4li" path="res://assets/sound/Spooktober_SoundDesign_1_Ghost_Disappear.ogg" id="5_gw4fi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xcptt"]

[sub_resource type="Animation" id="Animation_xv8o5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_tor68"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Appear:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_q7vop"]
resource_name = "chase"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.916667), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 5.96046e-08), Vector2(0, 1), Vector2(0, 5.96046e-08)]
}

[sub_resource type="Animation" id="Animation_chglj"]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Disappear:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5va8o"]
_data = {
"RESET": SubResource("Animation_xv8o5"),
"appear": SubResource("Animation_tor68"),
"chase": SubResource("Animation_q7vop"),
"disappear": SubResource("Animation_chglj")
}

[node name="Ghost" type="Area2D"]
collision_layer = 32
collision_mask = 16
script = ExtResource("1_pgtt6")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xcptt")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_qe422")

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5va8o")
}

[node name="Chase" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3j0uu")
volume_db = -5.0
autoplay = true
max_distance = 90.0
bus = &"Voice"

[node name="Appear" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qqd06")
max_distance = 120.0
bus = &"Voice"

[node name="Disappear" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_gw4fi")
max_distance = 120.0
bus = &"Voice"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_changed" from="Animator" to="." method="_on_animator_animation_changed"]
[connection signal="animation_finished" from="Animator" to="." method="_on_animation_finished"]
[connection signal="animation_started" from="Animator" to="." method="_on_animator_animation_started"]
